--- a/index.html
+++ b/index.html
@@ -1,19 +1,29 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="UTF-8">
-    <title>Hello World!</title>
-  </head>
-  <body>
-    <h1>Hello World!</h1>
-    <!-- All of the Node.js APIs are available in this renderer process. -->
-    We are using Node.js <script>document.write(process.versions.node)</script>,
-    Chromium <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
-  </body>
-
-  <script>
-    // You can also require other files to run in this process
-    require('./renderer.js')
-  </script>
+    <title>RGB-Speaker</title>
+    <!-- JS Libraries -->
+    <!-- NPM Libs -->
+    <!-- Moment.js for time formatting -->
+    <script src="node_modules/moment/moment.js"></script>
+    <!-- Angular Material and dependencies -->
+    <script src="node_modules/angular/angular.min.js"></script>
+    <script src="node_modules/angular-animate/angular-animate.min.js"></script>
+    <script src="node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="node_modules/angular-messages/angular-messages.min.js"></script>
+    <script src="node_modules/angular-material/angular-material.min.js"></script>
+    <script src="node_modules/angular-material-icons/angular-material-icons.min.js"></script>
+    <script src="node_modules/md-color-picker/src/js/mdColorPicker.js"></script>
+    <!-- Bower Libs -->
+    <script src="bower_components/tinycolor/tinycolor.js"></script>
+    <!-- Style Sheets -->
+    <link href="node_modules/md-color-picker/dist/mdColorPicker.min.css" rel="stylesheet"/>
+</head>
+<body ng-app="rgbSpeaker">
+<div ng-controller="mainCtrl">
+    <div md-color-picker="colorPicker.options" ng-model="colorPicker.color"></div>
+    <h3>{{colorPicker.color}}</h3>
+</div>
+</body>
 </html>
