--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="node_modules/md-color-picker/dist/mdColorPicker.js"></script>
     <script src="node_modules/tinycolor2/dist/tinycolor-min.js"></script>
     <script src="node_modules/lodash/lodash.min.js"></script>
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <!-- Style Sheets -->
     <link href="node_modules/md-color-picker/dist/mdColorPicker.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="node_modules/angular-material/angular-material.min.css" type="text/css"/>
@@ -31,7 +32,7 @@
     <script src="src/services/AudioService.js"></script>
     <script src="src/services/SerialService.js"></script>
 </head>
-<body ng-app="rgbSpeaker" ng-controller="mainCtrl">
+<body ng-app="rgbSpeaker" ng-controller="mainCtrl" ng-cloak>
 <md-toolbar class="md-hue-2 md-whiteframe-3dp">
     <div class="md-toolbar-tools">
         <i class="material-icons">speaker_group</i>
@@ -59,7 +60,6 @@
             <md-option ng-repeat="port in openPorts" ng-value="port">{{port}}</md-option>
         </md-select>
     </md-card>
-    <!--{{width}} x {{height}}-->
     <md-card ng-show="port.substring(0,3) === 'COM'">
         <md-tabs md-selected="config.currentModeId">
             <md-tab label="Solid Color" ng-click="config.currentModeName='solid'">
@@ -145,8 +145,35 @@
                 </md-tab-content>
             </md-tab>
             <md-tab label="Breathing" ng-click="config.currentModeName='breathing'">
-                <md-tab-content layout="row" layout-align="center center">
-                    <p><i>Coming soon&trade;.</i></p>
+                <md-tab-content layout="row" layout-align="space-around start">
+                    <div flex="40"
+                         md-color-picker
+                         ng-model="config.modes.breathing.color"
+                         label="Speakers"
+                         icon="speaker"
+                         default="#f00"
+                         md-color-generic-palette="false"
+                         md-color-material-palette="false"
+                         md-color-sliders="false"
+                         md-color-hsl="false"
+                         has-backdrop="false"
+                         md-color-clear-button="false"
+                         open-on-input="true"
+                         md-color-alpha-channel="false"
+                    ></div>
+                    <div flex="40">
+                        <md-slider-container style="margin-top: 20px">
+                            <span>Speed</span>
+                            <md-slider min="1" max="10" ng-model="config.modes.breathing.speed" class="md-primary">
+                            </md-slider>
+                            <span>{{config.modes.breathing.speed}}</span>
+                        </md-slider-container>
+                        <span layout="column" layout-align="start center">
+                        <md-subheader>RGB</md-subheader>
+                        <md-switch ng-model="config.modes.breathing.rgb" ng-change="switchRGB"
+                                   class="md-primary" style="margin-top: -15px; margin-left: 7px"></md-switch>
+                    </span>
+                    </div>
                 </md-tab-content>
             </md-tab>
             <md-tab label="Beat" ng-click="config.currentModeName='beat'">
@@ -176,6 +203,8 @@
             <md-subheader>Cache - Misc</md-subheader>
             <pre ng-show="portCache !== 'null'">{{portCache | json}}</pre>
             <p ng-show="portCache == 'null'">No cached data.</p>
+            <md-subheader>Window Size</md-subheader>
+            <pre>{{width}} x {{height}}</pre>
         </div>
     </div>
 </div>
